--- a/Savio/SwitchPlan/SASwitchViewController.xib
+++ b/Savio/SwitchPlan/SASwitchViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -11,11 +11,15 @@
         <mutableArray key="GothamRounded-Medium.otf">
             <string>GothamRounded-Medium</string>
             <string>GothamRounded-Medium</string>
+            <string>GothamRounded-Medium</string>
+            <string>GothamRounded-Medium</string>
         </mutableArray>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SASwitchViewController" customModule="Savio" customModuleProvider="target">
             <connections>
+                <outlet property="confirmBtn" destination="Xqt-QM-C44" id="hCp-XF-0zQ"/>
+                <outlet property="scrView" destination="Bo7-N7-RzW" id="iLY-dZ-KfY"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -43,28 +47,54 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tv5-BH-QrD">
                                     <rect key="frame" x="40" y="257" width="520" height="105"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="6.png" translatesAutoresizingMaskIntoConstraints="NO" id="87I-AG-E0f">
+                                        <imageView userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PlaceHolder100x100.png" translatesAutoresizingMaskIntoConstraints="NO" id="87I-AG-E0f">
                                             <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="100" id="Wnk-zj-wAq"/>
                                                 <constraint firstAttribute="height" constant="100" id="qdm-d7-nso"/>
                                             </constraints>
                                         </imageView>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="6.png" translatesAutoresizingMaskIntoConstraints="NO" id="Yet-8I-vPx">
+                                        <imageView userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PlaceHolder100x100.png" translatesAutoresizingMaskIntoConstraints="NO" id="Yet-8I-vPx">
                                             <rect key="frame" x="420" y="0.0" width="100" height="100"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="100" id="1N8-Xz-Fk3"/>
                                                 <constraint firstAttribute="height" constant="100" id="Qjy-Eg-VqY"/>
                                             </constraints>
                                         </imageView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tCT-fc-NW7">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="100" id="LkJ-Jo-Pw9"/>
+                                                <constraint firstAttribute="width" constant="100" id="gQ5-kM-08H"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="15"/>
+                                            <state key="normal" title="Title">
+                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QGx-Db-PPW">
+                                            <rect key="frame" x="420" y="0.0" width="100" height="100"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="100" id="MFL-EC-mxf"/>
+                                                <constraint firstAttribute="height" constant="100" id="WAh-Hp-aUX"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="17"/>
+                                            <state key="normal" title="Title">
+                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                        </button>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstItem="87I-AG-E0f" firstAttribute="top" secondItem="Tv5-BH-QrD" secondAttribute="top" id="1CQ-OQ-BVa"/>
+                                        <constraint firstItem="tCT-fc-NW7" firstAttribute="top" secondItem="Tv5-BH-QrD" secondAttribute="top" id="83b-w8-bHt"/>
                                         <constraint firstItem="87I-AG-E0f" firstAttribute="leading" secondItem="Tv5-BH-QrD" secondAttribute="leading" id="U3g-rM-IGm"/>
+                                        <constraint firstItem="QGx-Db-PPW" firstAttribute="top" secondItem="Tv5-BH-QrD" secondAttribute="top" id="b13-Y4-M8L"/>
                                         <constraint firstAttribute="height" constant="105" id="cpH-Nk-N2m"/>
                                         <constraint firstAttribute="trailing" secondItem="Yet-8I-vPx" secondAttribute="trailing" id="kOc-jU-DnN"/>
                                         <constraint firstItem="Yet-8I-vPx" firstAttribute="top" secondItem="Tv5-BH-QrD" secondAttribute="top" id="ua8-Q1-oIL"/>
+                                        <constraint firstItem="tCT-fc-NW7" firstAttribute="leading" secondItem="Tv5-BH-QrD" secondAttribute="leading" id="x1T-x7-vLr"/>
+                                        <constraint firstAttribute="trailing" secondItem="QGx-Db-PPW" secondAttribute="trailing" id="ycP-NG-wcp"/>
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vhd-pc-SDe" userLabel="confirm passcode">
@@ -89,6 +119,11 @@
                                     <state key="normal" title="Confirm">
                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </state>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                            <integer key="value" value="5"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
                                 </button>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="savivo-logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="WNR-qh-7mt">
                                     <rect key="frame" x="280" y="38" width="40" height="40"/>
@@ -156,7 +191,7 @@
         </view>
     </objects>
     <resources>
-        <image name="6.png" width="75" height="75"/>
+        <image name="PlaceHolder100x100.png" width="100" height="100"/>
         <image name="savivo-logo.png" width="85" height="85"/>
     </resources>
 </document>
