--- a/Savio/SwitchPlan/SASwitchViewController.xib
+++ b/Savio/SwitchPlan/SASwitchViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -19,6 +19,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SASwitchViewController" customModule="Savio" customModuleProvider="target">
             <connections>
                 <outlet property="confirmBtn" destination="Xqt-QM-C44" id="hCp-XF-0zQ"/>
+                <outlet property="planOneImageView" destination="87I-AG-E0f" id="mXM-J9-Beq"/>
+                <outlet property="planOneTitle" destination="tCT-fc-NW7" id="vN6-nf-hAz"/>
+                <outlet property="planTwoImageView" destination="Yet-8I-vPx" id="Bon-Ww-ihK"/>
+                <outlet property="planTwoTitle" destination="QGx-Db-PPW" id="WaD-To-gaS"/>
                 <outlet property="scrView" destination="Bo7-N7-RzW" id="iLY-dZ-KfY"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
